--- a/UI/package.json
+++ b/UI/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "d3": "^7.6.1",
+    "npm": "^8.15.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
